<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:orientation="horizontal"
    android:background="@drawable/gradient2">


    
    <TextView
        android:text="@string/nombre"
        android:textSize="@dimen/margen"
        android:layout_marginTop="200dp">
    </TextView>
    <EditText
        android:layout_marginTop="200dp"
        android:layout_rowSpan="1"
        android:width="200dp">
    </EditText>
    <TextView
        android:text="@string/correoe"
        android:textSize="@dimen/margen">

    </TextView>
    <EditText
        android:layout_rowSpan="1"
        android:width="200dp">

    </EditText>
    <TextView
        android:text="@string/sexo"
        android:textSize="20dp">

    </TextView>
    <RadioGroup
        android:layout_rowSpan="2"
        android:layout_marginLeft="230dp">
        <RadioButton
            android:text="@string/hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RadioButton>
        <RadioButton
            android:text="@string/mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RadioButton>
    </RadioGroup>

    <Button
        android:layout_row="3"
        android:id="@+id/btn_guardar"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:text="@string/guardar"
        android:backgroundTint="@color/colorAccent"
        ></Button>
</GridLayout>